--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,6 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>shoppingList</title>
 </head>
 <body>
