--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>shoppingList</title>
+    <title></title>
 </head>
 <body>
 <div id="root"></div>
